test/simple/typeerrors/Examples/NewNegationExpr.hs
test1 :: Bool
test1 = (- True)

test2 :: Bool
test2 = (-. True)
